@@ -1,6 +1,6 @@
 .TH VIPS 1 "30 June 1993"
 .SH NAME
-vips \- run vips function from UNIX command line
+vips \- run vips operations from the command line
 .SH SYNOPSIS
 .B vips [flags] [command] [command-args]
 .SH DESCRIPTION
