@@ -1,5 +1,6 @@
 12/5/10 started 7.22.0
 - bump and rename
+- vipsthumbnail has a manualpage and sharpens correctly
 
 21/3/10 started 7.21.3
 - added progress feedback to threadpool
